--- a/budget-bee-backend/package.json
+++ b/budget-bee-backend/package.json
@@ -23,6 +23,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "pino": "^10.3.0",
+    "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
     "zod": "^4.3.6"
   },
