--- a/budget-bee-frontend/package.json
+++ b/budget-bee-frontend/package.json
@@ -18,6 +18,7 @@
     "expo-router": "^6.0.23",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.563.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-hook-form": "^7.71.1",
