--- a/budget-bee-frontend/package.json
+++ b/budget-bee-frontend/package.json
@@ -24,14 +24,15 @@
     "react": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-native": "0.81.5",
-    "react-native-reanimated": "^4.2.1",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.2",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "~54.0.10",
     "typescript": "~5.9.2"
   },
   "private": true
