--- a/budget-bee-frontend/package.json
+++ b/budget-bee-frontend/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-worklets-core": "^1.6.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.2",
     "zustand": "^5.0.11"
